# Linux-Launcher

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: config.ini
src/: config.rs  debug.rs  lib.rs  main.rs  primary.rs  settings.rs  ui.rs
